# Squall

./: .gitignore  CMakeLists.txt  Default.cmake  README.md  setup.py
demo/: CMakeLists.txt  EventLoop.hxx  hello_cb.cxx  hello_cp.cxx
demo/cb/: EventLoop.hxx
demo/core/: CMakeLists.txt  EventLoop.hxx  hello_cb.cxx  hello_cp.cxx
include/squall/: Buffers.hxx  Dispatcher.hxx  EventBuffer.hxx  EventLoop.hxx  Exceptions.hxx  NonCopyable.hxx  PlatformLoop.hxx  PlatformWatcher.hxx  PlatformWatchers.hxx
include/squall/core/: Buffers.hxx  Dispatcher.hxx  Exceptions.hxx  NonCopyable.hxx  PlatformLoop.hxx  PlatformWatchers.hxx
tests/: CMakeLists.txt  test_Dispatcher.cxx  test_EventBuffer.cxx  test_IncomingBuffer.cxx  test_OutcomingBuffer.cxx
tests/core/: CMakeLists.txt  test_Dispatcher.cxx  test_IncomingBuffer.cxx  test_OutcomingBuffer.cxx
